<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="app_title">Shopping on one finger</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_sl1">Trustful shopping</string>
    <string name="title_sl2">Save money and time</string>
    <string name="title_sl3">Safe shopping</string>
    <string name="title_sl4">More variety</string>
    <string name="verify">OTP Verification</string>
    <string name="more_variety">More Variety</string>
    <string name="pass">one time password</string>
    <string name="mob_number">on this mobile number...</string>
    <string name="mob_type_number">Type your phone number</string>
    <string name="cont">Continue</string>
    <string name="code">Enter the OTP code to verify your number...</string>
    <string name="send_otp">Sending OTP...</string>
    <string name="valid_code">Please enter valid code</string>
    <string name="failed_code">Failed</string>
    <string name="profile_info">Profile information</string>
    <string name="profile_fill">Please set your name and profile image</string>
    <string name="hint_name">Enter your name</string>
    <string name="setup_profile">Setup profile</string>
    <string name="grocery">Grocery</string>
    <string name="kids_toy">Kids toy</string>
    <string name="ligon">Sign In</string>
    <string name="sing">Sign Up</string>
    <string name="start">GOT IT</string>

    <string name="we_will_send_you_an">We will send you an</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moscow">Moscow</string>
    <string name="red_square">The Red Square</string>
    <string name="choose_the">Choose the</string>
    <string name="Zero">0</string>
    <string name="search_bar">Search Bar</string>

    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="favourite_zone">Favourite Zone</string>
    <string name="recipes">Recipes</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="share">Share</string>
    <string name="best_offer">Best Offer</string>
    <string name="see_all">See All</string>
    <string name="all_category">All Category</string>

    <string name="adding_list_of_item">Adding List Of Item</string>
    <string name="cancel">Cancel</string>
    <string name="you_adding_the_item">You Adding the Item…</string>
    <string name="_500g">500g</string>
    <string name="_ru">:  115</string>
    <string name="total">Total</string>
    <string name="_445">: 1,226</string>
    <string name="_645">645</string>
    <string name="ok_order_place">Ok Order Place</string>
    <string name="kidsToy">Kids Toy</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="postal_code">Postal Code</string>
    <string name="add_to_card">Add Card</string>

    <string name="track_order">Track Order</string>
    <string name="estimated_time">ESTIMATED TIME</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_number">ORDER NUMBER</string>
    <string name="c862787">#C862787</string>
    <string name="order_placed">Order Placed</string>
    <string name="received_your_order">We have received your Order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="_confirmed">Your Order has been Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="preparing_order">we are preparing your order</string>
    <string name="ready_to_pickup">Ready To Pickup</string>
    <string name="for_pickup">Your Order is ready for pickup</string>
    <string name="womancolth">Women\'s Clothes</string>
    <string name="mencolth">Men Clothes</string>
    <string name="verified">Verified</string>
    <string name="my_notification">My Notification</string>
    <string name="private_policy">Private policy</string>
</resources>