<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".view.VerificationActivity">

    <ImageView
        android:scaleType="centerCrop"
        android:src="@drawable/verify"
        android:layout_width="250dp"
        android:layout_height="250dp"/>

    <TextView
        android:text="@string/verify"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/we_will_send_you_an"
            android:textAlignment="center"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/pass"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="6dp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:text="@string/mob_number"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="16sp"
        android:layout_marginEnd="6dp"
        android:textColor="@color/cardview_dark_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editNumber"
                android:hint="@string/mob_type_number"
                android:padding="10dp"
                android:ems="1"
                android:inputType="phone"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:textColor="@color/bg_phone"
                android:layout_marginBottom="15dp"
                android:background="@drawable/backgrounds_shapes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/continueBtn"
                android:text="@string/cont"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                android:backgroundTint="@color/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>