<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/category"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:layout_weight="1"
                android:text="@string/best_offer"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/bg_screen3"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/slider_view"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/grocery"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/pink"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/grocery_item"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/kids_toy"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/green"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/toy_item"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/all_category"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/aqua"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/all_category"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/womancolth"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/blue"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/woman_cloth_item"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/best_offer"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/bg_screen3"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <include layout="@layout/man_cloth_item"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:alpha="0.4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:elevation="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/best_offer"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/black"
                android:textStyle="bold|normal"
                android:layout_gravity="start|center"
                android:textSize="@dimen/slide_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/see_all"
                android:padding="@dimen/margin_btn"
                android:layout_margin="@dimen/margin_btn"
                android:textColor="@color/bg_screen3"
                android:textStyle="normal"
                android:layout_gravity="end|center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>