<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/homeSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@drawable/toolbar_background"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:elevation="@dimen/fab_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/profileImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="2dp"
                            android:layout_gravity="center"
                            android:padding="6dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/avatar"
                            app:shapeAppearanceOverlay="@style/Circular"
                            app:strokeColor="@android:color/darker_gray"
                            app:strokeWidth="2dp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="3"
                            android:background="@drawable/login_background"
                            android:orientation="horizontal"
                            android:padding="2dp"
                            tools:ignore="NestedWeights">

                            <EditText
                                android:id="@+id/search"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/small_margin"
                                android:layout_marginEnd="@dimen/small_margin"
                                android:layout_weight="1"
                                android:background="@null"
                                android:hint="@string/search_bar"
                                android:imeOptions="actionSearch"
                                android:inputType="text"
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:textStyle="bold|normal"
                                tools:ignore="Autofill, TouchTargetSizeCheck" />

                            <ImageButton
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="3dp"
                                android:background="@drawable/login_background"
                                android:backgroundTint="@color/dot_dark_screen3"
                                android:padding="3dp"
                                android:src="@drawable/ic_search"
                                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="13dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_location"
                        android:layout_gravity="center"
                        android:contentDescription="@string/moscow"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <LinearLayout
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv01"
                            android:layout_weight="1"
                            android:text="@string/moscow"
                            android:textSize="16sp"
                            android:textAppearance="@style/textStyle"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/tv02"
                            android:text="@string/red_square"
                            android:textSize="11sp"
                            android:textAppearance="@style/textStyle"
                            android:textColor="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="SmallSp"/>

                    </LinearLayout>

                    <RelativeLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        
                        <TextView
                            android:id="@+id/itemAdd"
                            android:text="@string/Zero"
                            android:textSize="10sp"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:padding="@dimen/margin_btn"
                            android:background="@drawable/switch_trcks"
                            android:backgroundTint="@color/red_light"
                            android:visibility="invisible"
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            tools:ignore="SmallSp" />

                        <ImageView
                            android:id="@+id/addCard"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="@dimen/small_margin"
                            android:layout_marginEnd="@dimen/fab_margin"
                            android:src="@drawable/ic_add_cart"
                            app:tint="@color/white" />

                    </RelativeLayout>

                </LinearLayout>

                </LinearLayout>

                <include layout="@layout/all_item_gets"/>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include layout="@layout/navigation_drawer"/>

</androidx.drawerlayout.widget.DrawerLayout>